# workshop-rust-for-artists

./: CODE_OF_CONDUCT.md  README.md  hackmd-template.md
.github/: FUNDING.yml
code/walkers/: Cargo.toml  README.md
code/walkers/src/: ars2022.rs  final.rs  linz2022nohistory.rs  main.rs  rustsummit2021.rs
slides/: index.html
slides-ars-electronica/: index.html
slides-ars-electronica/assets/: .#main.css
slides-rust-summit/assets/: main.css
