[package]
name = "walkers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "final"
path = "src/final.rs"

[[bin]]
name = "summit2021"
path = "src/rustsummit2021.rs"

[[bin]]
name = "linz2022nohistory"
path = "src/linz2022nohistory.rs"

[dependencies]
nannou = "0.18"

